
@TODO Snap.CreateNewContext do not work in Tango8 (when triggered from Panic)
@TODO Rename     widgetArchivingBrowser.ModelSearchWidget to widget.browser.ArchivingBrowser
@TODO: rename ArchivingBrowser to browser


7.3 Identify multiples schemas (including HDB++) - May 2017

ctarchiving: updated launcher
ctarchiving: reduce logging for shell-launched commands
api: fix bug in start_archiving, pull request #1 from cmft/patch-1
reader.get_attribute_values: make cache usage optional
schemas.Schemas: identify new archiving schemas, property based
schemas.Schemas: filter out unreachable Schemas
servers.PyExtractor: enable as submodule
taurusfinder: adapt imports to taurus4 (unfinished)
utils.decimate_db_tables: adapt to hdbpp, move decimate_array to fandango
widget: adapt to Taurus4, include TaurusAttributeChooser widget

7.2 First release from git - 2017/01/13

Add --log-x option to archiving2plot
Rename ctfinder to ctsearch
Added safer methods for HDBpp.config initialization
Adding array management and get_full_attribute_name method

PyExtractor device:
Add GetCachedAttribute command 
Add AddPeriodicQuery(), rename Dynamic to Cached Attributes, 
Add Polling by default
Add X/Y 2D attributes

Added PyTangoArchiving.Schemas as Tango free property


7.1

Added extra arguments to Reader.export_to_text (archiving2csv / history widget)
Added ShowHistoryDialog class to have persistency on dates for data export

FANDANGO UPDATE NEEDED (QOptionDialog)

7.0 New ArchivingTrend widget, bugs solved in snaps, archiver and history widgets


6.9 Solved bugs in hdb++, ctsnaps and trends 

in HDB++ API add_attribute and get_attribute_values
in ctsnaps (import csv file, modify context dialog
trend: fixed a bug on missing logger_obj in parseTrendModel

6.7  Solved bugs in Snaps Import/Export/Load from CSV

6.6, May 2016, bug fixes in reader/trend, added check_archiving_performance
-------------------------------------------------------------------------------
